<resources>
    <string name="app_name">Sixtagram</string>
    <string name="calendar">캘린더</string>
    <string name="member">멤버</string>
    <string name="game">게임</string>
    <string name="community">커뮤니티</string>
    <string name="login_edit_password">비밀 번호 입력 하세요</string>
    <string name="login_edit_email">이메일을 입력 하세요</string>
    <string name="sign_up_email_overlap">중복 확인</string>
    <string name="login_edit_name">이름을 입력 하세요</string>
    <string name="sign_up_residence">거주지를 입력 하세요</string>
    <string name="sign_up_mbti">mbti를 입력 하세요</string>
    <string name="sign_up_hobby">취미를 입력 하세요</string>
    <string name="sign_up_blog">블로그 주소를 입력 하세요</string>
    <string name="sign_up_github">github 주소를 입력 하세요</string>
    <string name="sign_up_concern">관심사를 입력 하세요</string>
    <string name="sign_up_member">회원 가입 완료</string>
    <string name="login_email">이메일을 입력 하세요</string>
    <string name="login_password">비밀 번호를 입력 하세요</string>
    <string name="login_login_button">로그인</string>
    <string name="login_membership">회원 가입</string>
    <string name="login_member_search">아이디와 비밀 번호 찾기</string>
    <string name="notice">공지사항</string>
    <string name="sign_up_email_check">이메일을 입력 하세요</string>
    <string name="sign_up_password_check">비밀 번호를 입력 하세요</string>
    <string name="sign_up_password_check2">영문, 숫자, 특수 문자 조합으로 6자리 이상</string>
    <string name="daily">일상</string>
    <string name="post_topic">게시글 주제 ⋁</string>
    <string name="information">정보</string>
    <string name="member_find_email">이메일, 비밀 번호 찾기</string>
    <string name="member_email_view">이메일 표시</string>
    <string name="member_password_view">비밀번호 표시</string>
    <string name="member_find_close">닫기</string>
    <string name="sign_up_editText">하고 싶은 말을 작성 하세요</string>
    <string name="home_button">SixTagram 입니다.</string>
    <string name="memo_button">메모장 글쓰기</string>
    <string name="notion_button">공지사항 수정</string>
    <string name="home_text">홈</string>
    <string name="calendar_date_format">yyyy년 MM월 dd일 EEEE</string>
    <string name="day_display_format">%04d년 %02d월 %02d일 %s요일</string>
    <string name="save_message">저장했습니다.</string>
    <string name="choose_category">카테고리를 골라주세요</string>
    <string name="daily_life">daily life</string>
    <string name="thing_to_do">a thing to do</string>
    <string name="notion">notion</string>
    <string name="input_notion_message">공지사항을 입력해주세요.</string>
    <string name="text_update_message">텍스트 수정 업데이트 중입니다.</string>
    <string name="white_notion">공지사항 : </string>
    <string name="notion_input">공지사항을 변경해주세요.</string>
    <string name="memoTxt">메모장 입니다.</string>
    <string name="toastCapture">저장했습니다.</string>
    <string name="titleEdt">제목을 입력해주세요.</string>
    <string name="memoEdt">메모를 입력해주세요.</string>
    <string name="capturelist">캡쳐 리스트</string>
    <string name="noticeEdt">공지사항 변경</string>
    <string name="sixtagramnotice">Sixtagram 공지사항</string>
    <string name="time_promise">우리팀 시간 약속</string>
    <string name="text_schedule">-오전 : 09:00 ~ 10:00 \n 데일리 스크럼 -> 노션 페이지에 오늘 계획 정리 \n-오전 : 10:00 ~ 11:00
\n 알고리즘 학습 1일 1문제 목표! \n -집중 코딩 시간 \n -오후 : 14:00 ~ 18:00 \n
-일반적인 학습과 달리 강의를 듣는 것만으로는 개발 실력이 상승하지 않습니다. \n
-개발은 고민하고 스스로 시도하고 생각하는 시간이 그 무엇보다도 중요합니다. \n
-집중 코딩 시간을 통해 팀원들과 함께 문제에 맞닥뜨리고 , 정리해보세요 \n</string>
    <string name="member_modify">수정</string>
    <string name="member_delete">삭제</string>
    <string name="member_email_address">이메일 주소</string>
    <string name="member_regidence">거주지</string>
    <string name="member_mbti">MBTI</string>
    <string name="member_hobby">취미</string>
    <string name="member_interest">관심사</string>
    <string name="member_blog_address">블로그 주소</string>
    <string name="member_github_address">깃허브 주소</string>
    <string name="member_comment">한마디</string>
    <string name="member_delete_alarm">정말 삭제하시겠습니까?</string>
    <string name="member_cancel">취소</string>
    <string name="sign_up_image">이미지 주소를 넣으세요</string>
    <string name="game_mode_easy">이지</string>
    <string name="game_mode_base">기본</string>
    <string name="game_mode_hard">하드</string>
    <string name="game_mode_hell">지옥</string>
    <string name="game_mode">모드</string>
    <string name="game_numsize_25">25</string>
    <string name="game_numsize_50">50</string>
    <string name="game_numsize">숫자 크기 : 1~</string>
    <string name="game_game_difficulty">난이도 : </string>
    <string name="game_gameStateRunning">정상</string>
    <string name="game_gameStateFinished">종료</string>
    <string name="game_gameStatePlayed">게임중</string>
    <string name="game_gameStatePaused">일시정지</string>
    <string name="game_targetNumber">다음 숫자 : </string>
    <string name="game_toggle_message_easy">이지모드는 힌트가 의미 없어요~</string>
    <string name="game_toggle_message_0">%d번이나 힌트를 누르셧군요?</string>
    <string name="game_toggle_message_1">%d번 눌렀으면 힌트없이 해보자구요.</string>
    <string name="game_toggle_message_2">힌트를 누르면 최종스코어가 낮아져요.</string>
    <string name="game_toggle_message_3">그만!!!!!!! 버튼부서지겠다!!!</string>
    <string name="game_toggle_message_4">버튼을 죽이셨어요.</string>
    <string name="game_toggle_message2_0">%d번이나 일시정지를 누르셧군요?</string>
    <string name="game_toggle_message2_1">%d번 눌렀으면 일시정지없이 해보자구요.</string>
    <string name="game_toggle_message2_2">일시정지는 최종스코어에 영향을 주지 않아요.</string>
    <string name="game_toggle_message2_3">그만!!!!!!! 버튼부서지겠다!!!</string>
    <string name="game_toggle_message2_4">버튼을 죽이셨어요.</string>
    <string name="game_message_ending"> </string>
    <string name="game_gamescore">점수 : </string>
    <string name="game_strat">게임 하러하기</string>
    <string name="game_numsize_button">숫자 범위 : 1~25</string>
    <string name="game_difficulty_button">난이도 : 이지 모드</string>
    <string name="game_Description_button">게임 설명</string>
    <string name="game_Hint_button">힌트</string>
    <string name="game_Ranking_button">랭킹 보기</string>
    <string name="game_ResetRankings_Button">랭킹 초기화</string>
    <string name="game_ResetRankings_toggle_message">랭킹이 초기화 되었어요.</string>
    <string name="game_ResetRankings_score">점</string>
    <string name="game_ResetRankings_second">초</string>
    <string name="game_ScoreBoard_Text">상위 15등의 기록입니다.</string>
    <string name="game_button_killing">버튼이 찌그러져 죽었어요.</string>
    <string name="game_setting">설정</string>
    <string name="game_information">정보</string>
    <string name="game_support">지원</string>
    <string name="game_Description">게임 설명</string>
    <string name="game_description_message">
        게임 목표 : 숫자를 차례대로 눌러서 모든 버튼을 없애면 됩니다.\n\n\n
        게임 모드 : 이지, 기본, 하드, 지옥\n\n
        이지 : 다음 숫자를 다른색으로 표시합니다.\n
        기본 : 기본이 되는 모드\n
        하드 : 숫자가 주기적으로 가려집니다. \n가려져도 클릭은 가능합니다.\n
        지옥 : 숫자가 주기적으로 가려집니다. \n가려지면 클릭도 안됩니다.\n\n\n
        지원 : 일시정지 버튼과 힌트 버튼이 있습니다.\n\n
        일시정지 버튼을 누르면 타이머가 멈추고 숫자가 가려집니다\n
        힌트 버튼을 누르면 다음 숫자버튼의 색깔이 바뀝니다\n
</string>
    <string name="game_start_title">게임</string>
    <string name="game_main_title">게임</string>
    <string name="game_end_title">스코어 보드</string>
    <string name="game_description_title">게임 설명</string>
    <string name="game_main_start_message">위쪽의 1버튼을 누르면 게임이 시작됩니다.</string>
    <string name="game_end_current">이번 판 기록:</string>
    <string name="input_title">제목을 입력하세요</string>
    <string name="input_content">이야기를 적어주세요</string>
    <string name="game_end_return_to_start">처음 게임화면</string>
    <string name="deletetxt">삭제</string>
    <string name="do_deletetxt">삭제 하시겠습니까?</string>
    <string name="ok_delete">확인</string>
    <string name="delete_go">삭제 되었습니다.</string>
    <string name="no_delete">취소</string>
    <string name="no_do_delete">취소하셨습니다.</string>
</resources>