<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    tools:context=".community.CommunityAddActivity">

    <LinearLayout
        android:id="@+id/layout_app_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_community_add_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:padding="8dp"
            android:src="@drawable/ic_back" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_community_add_save"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:padding="8dp"
            android:src="@drawable/ic_save" />


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_topic"
        style="@style/FontSizeMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_topic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_app_bar" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:background="#C1BFBF"
        app:layout_constraintTop_toBottomOf="@id/tv_topic" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_comment_add_title"
        style="@style/FontSizeLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_title"
        android:maxLines="1"
        android:textStyle="bold"
        android:paddingVertical="5dp"
        android:background="@null"
        app:layout_constraintBottom_toTopOf="@id/edt_comment_add_content"
        app:layout_constraintTop_toBottomOf="@id/line" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_comment_add_content"
        style="@style/FontSizeMedium"
        android:layout_width="match_parent"
        android:background="@null"

        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:gravity="top"
        android:hint="@string/input_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_comment_add_title" />


</androidx.constraintlayout.widget.ConstraintLayout>